--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,10 @@ body{
 }
 
 .box-img{
-    border:1px solid #eee;
+    border:1px solid #bbb;
     margin-right: 5px;
     height: 100px;
     width: 100px;
-    background-color: #999;
     border-radius: 5px;
 }
 
@@ -30,6 +29,7 @@ body{
     width:98px;
     height:98px;
     opacity: 0;
+    position: absolute;
 }
 
 .box-text{
@@ -70,9 +70,9 @@ body{
 }
 
 .ele {
-    flex-shrink: 0;
+    flex-shrink: 1;
     width: 6px;
-    background-color: #ddd;
+    background-color: #bbb;
     box-shadow: 0px 0px 1px 1px #fff;
 }
 
