--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,17 @@ body{
     border: 1px solid black;
 }
 
+.box-loading{
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 50px;
+    background-color: #bbb;
+    z-index: 9999;
+
+}
+
 .box-content{
     display: flex;
     border: 1px solid #ddd;
