--- a/css/main.css
+++ b/css/main.css
@@ -18,14 +18,18 @@ body{
 }
 
 .box-loading{
+    text-align: center;
+    padding: 120px;
     position: fixed;
-    left: 0px;
-    bottom: 0px;
+    left: 0;
     width: 100%;
-    height: 50px;
-    background-color: #bbb;
+    height: 100%;
     z-index: 9999;
+}
 
+.box-loading > img{
+    animation: kf-loading 3s linear infinite;
+    opacity: 0.6;
 }
 
 .box-content{
@@ -54,15 +58,28 @@ body{
 }
 
 .que-image{
-    border:1px solid #bbb;
     margin-right: 5px;
-    height: 222px;
+    height: 120px;
     border-radius: 5px;
 }
 
 .up-que-image{
     width:100%;
-    height:222px;
+    height:120px;
+    opacity: 0;
+    position: absolute;
+}
+
+.que-src-image{
+    margin-right: 5px;
+    height: 360px;
+    border-radius: 5px;
+    border-bottom:1px solid #bbb;
+}
+
+.up-que-src-image{
+    width:100%;
+    height:360px;
     opacity: 0;
     position: absolute;
 }
@@ -72,6 +89,10 @@ body{
     height: 36px;
     opacity: 0;
     position: absolute;
+}
+
+.box-type-sound{
+    padding-left: 10px;
 }
 
 .que-sound-listen{
@@ -162,4 +183,13 @@ body{
     width: 6px;
     background-color: #bbb;
     box-shadow: 0px 0px 1px 1px #fff;
+}
+
+
+@keyframes kf-loading{
+    0%{transform: rotate(0deg)}
+    25%{transform: rotate(90deg)}
+    50%{transform: rotate(180deg)}
+    75%{transform: rotate(270deg)}
+    100%{transform: rotate(360deg)}
 }
