--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,22 @@ body{
     margin-right: 10px;
 }
 
+#box-paper-submit{
+    color: #337ab7;
+}
+
+.type-que-count{
+    margin-left: 10px;
+}
+
+.box-type-count{
+    margin: 0 10px;
+    padding: 2px 10px;
+    display: flex;
+    color:#666;
+    border-left: 3px #bbb solid;
+}
+
 .box-shadow{
     height: 110px;
     width: 100%;
